@@ -23,8 +23,6 @@
 package com.microsoft.identity.common.internal.cache
 
 import com.microsoft.identity.common.internal.broker.BrokerData
-import com.microsoft.identity.common.java.interfaces.IStorageSupplier
-import com.microsoft.identity.common.components.InMemoryStorageSupplier
 import com.microsoft.identity.common.java.interfaces.INameValueStorage
 import com.microsoft.identity.common.java.util.ported.InMemoryStorage
 import com.microsoft.identity.common.java.util.ported.Predicate
@@ -35,33 +33,13 @@ import java.util.concurrent.TimeUnit
 
 class ActiveBrokerCacheTest {
 
-    private val MOCK_HASH = "MOCK_HASH"
-    private val MOCK_PACKAGE_NAME = "MOCK_PACKAGE_NAME"
-
-    /**
-     * For broker hosting apps which dual stacks SDK and Broker,
-     * We want to make sure the caches on both sides are separate - they are executed different processes.
-     * */
-    @Test
-    fun testWritingOnSdkCache_ShouldNotBeReadableOnBrokerCache(){
-        val storageSupplier = getStorageSupplier()
-
-        val brokerCache = ActiveBrokerCache.getBrokerMetadataStoreOnBrokerSide(storageSupplier)
-        val sdkCache = ClientActiveBrokerCache.getBrokerMetadataStoreOnSdkSide(storageSupplier)
-
-        Assert.assertNull(brokerCache.getCachedActiveBroker())
-        Assert.assertNull(sdkCache.getCachedActiveBroker())
-
-        val mockData = BrokerData(MOCK_PACKAGE_NAME, MOCK_HASH)
-        sdkCache.setCachedActiveBroker(mockData)
-
-        // Value should only be readable by the sdk cache.
-        Assert.assertNull(brokerCache.getCachedActiveBroker())
-        Assert.assertEquals(mockData, sdkCache.getCachedActiveBroker())
+    companion object {
+        private const val MOCK_HASH = "MOCK_HASH"
+        private const val MOCK_PACKAGE_NAME = "MOCK_PACKAGE_NAME"
     }
 
     /**
-     * If there are 2 instances of [ActiveBrokerCache] that points to the same storage.
+     * If there are 2 instances of [BaseActiveBrokerCache] that points to the same storage.
      * A value written by the first one should be readable by the 2nd one.
      **/
     @Test
@@ -69,8 +47,8 @@ class ActiveBrokerCacheTest {
         val lock = Mutex()
         val storage = InMemoryStorage<String>()
 
-        val cache1 = ActiveBrokerCache(storage, lock)
-        val cache2 = ActiveBrokerCache(storage, lock)
+        val cache1 = BaseActiveBrokerCache(storage, lock)
+        val cache2 = BaseActiveBrokerCache(storage, lock)
 
         Assert.assertNull(cache1.getCachedActiveBroker())
         Assert.assertNull(cache1.getCachedActiveBroker())
@@ -124,7 +102,7 @@ class ActiveBrokerCacheTest {
             }
         }
 
-        val cache = ActiveBrokerCache(writeOnlyStorage, Mutex())
+        val cache = BaseActiveBrokerCache(writeOnlyStorage, Mutex())
         val mockData = BrokerData(MOCK_PACKAGE_NAME, MOCK_HASH)
         cache.setCachedActiveBroker(mockData)
 
@@ -137,11 +115,11 @@ class ActiveBrokerCacheTest {
     fun testRead(){
         val readOnlyStorage = object : INameValueStorage<String> {
             override fun get(name: String): String? {
-                if (name == ActiveBrokerCache.ACTIVE_BROKER_CACHE_PACKAGE_NAME_KEY) {
+                if (name == BaseActiveBrokerCache.ACTIVE_BROKER_CACHE_PACKAGE_NAME_KEY) {
                     return MOCK_PACKAGE_NAME
                 }
 
-                if (name == ActiveBrokerCache.ACTIVE_BROKER_CACHE_SIGHASH_KEY) {
+                if (name == BaseActiveBrokerCache.ACTIVE_BROKER_CACHE_SIGHASH_KEY) {
                     return MOCK_HASH
                 }
 
@@ -173,7 +151,7 @@ class ActiveBrokerCacheTest {
             }
         }
 
-        val cache = ActiveBrokerCache(readOnlyStorage, Mutex())
+        val cache = BaseActiveBrokerCache(readOnlyStorage, Mutex())
         Assert.assertEquals(BrokerData(MOCK_PACKAGE_NAME, MOCK_HASH), cache.getCachedActiveBroker())
         Assert.assertEquals(BrokerData(MOCK_PACKAGE_NAME, MOCK_HASH), cache.inMemoryCachedValue)
     }
@@ -209,12 +187,12 @@ class ActiveBrokerCacheTest {
             }
 
             override fun put(name: String, value: String?) {
-                if (name == ActiveBrokerCache.ACTIVE_BROKER_CACHE_PACKAGE_NAME_KEY) {
+                if (name == BaseActiveBrokerCache.ACTIVE_BROKER_CACHE_PACKAGE_NAME_KEY) {
                     brokerPkgName = value
                     return
                 }
 
-                if (name == ActiveBrokerCache.ACTIVE_BROKER_CACHE_SIGHASH_KEY) {
+                if (name == BaseActiveBrokerCache.ACTIVE_BROKER_CACHE_SIGHASH_KEY) {
                     brokerSigHash = value
                     return
                 }
@@ -223,7 +201,7 @@ class ActiveBrokerCacheTest {
             }
         }
 
-        val cache = ActiveBrokerCache(readOnlyStorage, Mutex())
+        val cache = BaseActiveBrokerCache(readOnlyStorage, Mutex())
         val mockData = BrokerData(MOCK_PACKAGE_NAME, MOCK_HASH)
         cache.setCachedActiveBroker(mockData)
 
@@ -266,7 +244,7 @@ class ActiveBrokerCacheTest {
             }
         }
 
-        val cache = ActiveBrokerCache(clearOnlyStorage, Mutex())
+        val cache = BaseActiveBrokerCache(clearOnlyStorage, Mutex())
         cache.inMemoryCachedValue = BrokerData(MOCK_PACKAGE_NAME, MOCK_HASH)
 
         cache.clearCachedActiveBroker()
@@ -276,7 +254,7 @@ class ActiveBrokerCacheTest {
 
     @Test
     fun testE2EWriteReadClear(){
-        val cache = ActiveBrokerCache(InMemoryStorage(), Mutex())
+        val cache = BaseActiveBrokerCache(InMemoryStorage(), Mutex())
         Assert.assertNull(cache.getCachedActiveBroker())
 
         val mockData = BrokerData(MOCK_PACKAGE_NAME, MOCK_HASH)
@@ -328,9 +306,5 @@ class ActiveBrokerCacheTest {
 
         Assert.assertFalse(cache.shouldUseAccountManager())
         Assert.assertNull(cache.cachedTimeStamp)
-    }
-    
-    private fun getStorageSupplier() : IStorageSupplier {
-        return InMemoryStorageSupplier()
     }
 }
